// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordAnd2FA /> render() should render with or without 2FA section based on account access to the feature 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Password & 2FA
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="contentWrapper"
    >
      <div
        class="heading-subsection-semibold mb16"
      >
        Update password
      </div>
      <div
        class="body-regular mb16"
      >
        Enter your current password to confirm your identity, then the new password you would like to set instead.
      </div>
      <form
        class=""
      >
        <div
          class="InputField inputField required form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-old_password"
          >
            Current password
          </label>
          <div
            class=""
          >
            <input
              class="form-control"
              id="id-old_password"
              placeholder="Current password"
              required=""
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="InputField inputField required form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-new_password"
          >
            New password
          </label>
          <div
            class=""
          >
            <input
              class="form-control"
              id="id-new_password"
              pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{14,128}$"
              placeholder="New password"
              required=""
              title="Password must be between 14 and 128 characters long and contain at least 1 lower case letter, 1 upper case letter and 1 digit."
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="InputField inputField required form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-confirm_new_password"
          >
            Confirm new password
          </label>
          <div
            class=""
          >
            <input
              class="form-control"
              id="id-confirm_new_password"
              pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{14,128}$"
              placeholder="Confirm new password"
              required=""
              title="Password must be between 14 and 128 characters long and contain at least 1 lower case letter, 1 upper case letter and 1 digit."
              type="password"
              value=""
            />
          </div>
        </div>
        <button
          class="wrapper updatePasswordButton primary medium"
        >
          Update Password
        </button>
      </form>
      <div
        class="heading-subsection-semibold mb16"
      >
        Two-Factor Authentication
        <div
          class="badge ml-3 "
        >
          Disabled
        </div>
      </div>
      <div
        class="body-regular mb16"
      >
        For an added layer of security, your admin requires you to use two-factor authentication (2FA) when you sign in to Gorgias.
        <a
          href=""
        >
           Learn more
        </a>
      </div>
      <button
        class="wrapper primary medium"
        type="button"
      >
        Enable Two-Factor Authentication
      </button>
    </div>
  </div>
</div>
`;

exports[`<PasswordAnd2FA /> render() should render with or without 2FA section based on account access to the feature 2`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Change password
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="contentWrapper"
    >
      <div
        class="heading-subsection-semibold mb16"
      >
        Update password
      </div>
      <div
        class="body-regular mb16"
      >
        Enter your current password to confirm your identity, then the new password you would like to set instead.
      </div>
      <form
        class=""
      >
        <div
          class="InputField inputField required form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-old_password"
          >
            Current password
          </label>
          <div
            class=""
          >
            <input
              class="form-control"
              id="id-old_password"
              placeholder="Current password"
              required=""
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="InputField inputField required form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-new_password"
          >
            New password
          </label>
          <div
            class=""
          >
            <input
              class="form-control"
              id="id-new_password"
              pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{14,128}$"
              placeholder="New password"
              required=""
              title="Password must be between 14 and 128 characters long and contain at least 1 lower case letter, 1 upper case letter and 1 digit."
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="InputField inputField required form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-confirm_new_password"
          >
            Confirm new password
          </label>
          <div
            class=""
          >
            <input
              class="form-control"
              id="id-confirm_new_password"
              pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{14,128}$"
              placeholder="Confirm new password"
              required=""
              title="Password must be between 14 and 128 characters long and contain at least 1 lower case letter, 1 upper case letter and 1 digit."
              type="password"
              value=""
            />
          </div>
        </div>
        <button
          class="wrapper updatePasswordButton primary medium"
        >
          Update Password
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`<PasswordAnd2FA /> render() should render with or without change password based on if the user has or not a password 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Change password
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="contentWrapper"
    >
      <div
        class="heading-subsection-semibold mb16"
      >
        Update password
      </div>
      <div
        class="body-regular mb16"
      >
        Enter your current password to confirm your identity, then the new password you would like to set instead.
      </div>
      <form
        class=""
      >
        <div
          class="InputField inputField required form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-old_password"
          >
            Current password
          </label>
          <div
            class=""
          >
            <input
              class="form-control"
              id="id-old_password"
              placeholder="Current password"
              required=""
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="InputField inputField required form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-new_password"
          >
            New password
          </label>
          <div
            class=""
          >
            <input
              class="form-control"
              id="id-new_password"
              pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{14,128}$"
              placeholder="New password"
              required=""
              title="Password must be between 14 and 128 characters long and contain at least 1 lower case letter, 1 upper case letter and 1 digit."
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="InputField inputField required form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-confirm_new_password"
          >
            Confirm new password
          </label>
          <div
            class=""
          >
            <input
              class="form-control"
              id="id-confirm_new_password"
              pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{14,128}$"
              placeholder="Confirm new password"
              required=""
              title="Password must be between 14 and 128 characters long and contain at least 1 lower case letter, 1 upper case letter and 1 digit."
              type="password"
              value=""
            />
          </div>
        </div>
        <button
          class="wrapper updatePasswordButton primary medium"
        >
          Update Password
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`<PasswordAnd2FA /> render() should render with or without change password based on if the user has or not a password 2`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Change password
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="contentWrapper"
    />
  </div>
</div>
`;
